<resources>
    <string name="app_name">OptimusWayFinal</string>
    <string name="chapeco">Chapecó</string>
    <string name="arvoredo">Arvoredo</string>
    <string name="xavantina">Xavantina</string>
    <string name="it">Itá</string>
    <string name="seara">Seara</string>
    <string name="concordia">Concórdia</string>
    <string name="registrar">Registrar</string>
    <string name="senha">Senha</string>
    <string name="email">Email</string>
    <string name="empresa">Empresa</string>
    <string name="idade">Idade</string>
    <string name="nome">Nome</string>
    <string name="logo">logo</string>
    <string name="seta_voltar">seta_voltar</string>
    <string name="entrar">Entrar</string>
    <string name="cadastre_se">Cadastre-se</string>
    <string name="optimus_way">Optimus Way</string>
    <string name="Destino">Destino</string>
    <string name="Passageiros">Passageiros</string>
    <string name="origem">Origem</string>
    <string name="registrar_rota">Registrar Rota</string>
</resources>
