<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/origem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:text="@string/concordia"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/ponto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="190dp"
            android:text="@string/seara"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ponto1edt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="190dp"
            android:hint="Passageiros"
            android:layout_alignParentRight="@+id/ponto1"
            android:layout_marginLeft="200dp"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/ponto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="260dp"
            android:text="@string/it"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ponto2edt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="260dp"
            android:hint="Passageiros"
            android:layout_alignParentRight="@+id/ponto2"
            android:layout_marginLeft="200dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/ponto3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="330dp"
            android:text="@string/xavantina"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/ponto3edt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="330dp"
            android:hint="Passageiros"
            android:layout_alignParentRight="@+id/ponto3"
            android:layout_marginLeft="200dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/ponto4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="400dp"
            android:text="@string/arvoredo"
            android:textSize="20sp"
            android:layout_marginStart="20dp"/>

        <EditText
            android:id="@+id/ponto4edt"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:hint="Passageiros"
            android:layout_alignParentRight="@+id/ponto4"
            android:layout_marginLeft="200dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/Destino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="470dp"
            android:text="@string/chapeco"
            android:textSize="20sp" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="540dp"
            android:text="Registrar Rota"
            android:textSize="20sp"
            android:onClick="telaMapa"/>

    </RelativeLayout>

</androidx.appcompat.widget.LinearLayoutCompat>